<resources>
    <string name="app_name">Mishutt</string>
    <string name="mishutt_finances">Mishutt Financial</string>
    <string name="welcome">Welcome to Mishutt Financial</string>
    <string name="no_internet">No internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="blank"> </string>
    <string name="image">Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="rupee">\u20B9</string>
    <string name="percent">%</string>
    <string name="more">More</string>
    <string name="service_mobile_number">+91 94313 48343</string>
    <string name="service_email_id">info@mishutt.com</string>
    <string name="version">Version</string>
    <string name="get_started">Let\'s get you started!</string>
    <string name="mishutt_access">Mishutt needs access to SMS and Location</string>
    <string name="sms_permission">Mishutt auto-organises your earnings &amp; expenses by reading your business SMS.
        \nNo personal SMS are read.\n\nRestore your Mishutt data when you move to a new phone.</string>
    <string name="location_optional">Location</string>
    <string name="location_permission">Mishutt needs location permission for bill payments.</string>
    <string name="agree">I Agree</string>
    <string name="exit">Exit</string>
    <string name="sign_in_to_continue">Please sign in to continue…</string>
    <string name="or">OR</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="mobile_number_length">Mobile Number must be 10 digit</string>
    <string name="enter_password">Enter Password</string>
    <string name="not_registered">Doesn\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_continue">Please sign up to continue…</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="referral_code">Referral Code (if any)</string>
    <string name="next">Next</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_valid_email_id">Enter valid Email ID</string>
    <string name="already_registered">Already have an Account?</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_account">Verify Account</string>
    <string name="verification_msg">Please type the verification code sent to</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verification_code_length">Verification Code must be 4 digit</string>
    <string name="verification_code_length_six">Verification Code must be 6 digit</string>
    <string name="submit">Submit</string>
    <string name="resend">Resend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="home_second">Home Second</string>
    <string name="action_settings">Settings</string>
    <string name="choose_theme">Theme</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_light_theme">Light</string>
    <string name="action_dark_theme">Dark</string>
    <string name="action_system_default">System Default</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="string_new">New</string>
    <string name="why_choose_us">Why Choose Us</string>
    <string name="credit_score_header_one">Increase chances of application approval</string>
    <string name="credit_score_header_two">Better offers</string>
    <string name="credit_score_header_three">Take charge of your finances</string>
    <string name="credit_score_description_one">A score of 750+ boosts your chances of getting a loan/Credit Card</string>
    <string name="credit_score_description_two">The better your score, the more offers you\'ll be eligible for</string>
    <string name="credit_score_description_three">Understanding your score helps you take the right next steps</string>
    <string name="expense_manager">Expense Manager</string>
    <string name="no_earning_expense">No Expense or Earning Data Added Yet</string>
    <string name="expense_manager_text">Looking for an expense and budget tool? Stop searching. Expense Manager is simple, intuitive, stable and feature-rich app that is just designed for you. Everything you need at your fingertips to manage the expenditures, checkbook and budgets.</string>
    <string name="view_category_wise">Tap here to view Category-wise</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="select_start_end_date">Select Start Date &amp; End Date</string>
    <string name="no_data">No Data Found</string>
    <string name="date">Date</string>
    <string name="due_date">Due Date</string>
    <string name="due_amount">Due Amount</string>
    <string name="category">Category</string>
    <string name="earning">Earning(s)</string>
    <string name="spending">Expense(s)</string>
    <string name="description">Description</string>
    <string name="spend_analyzer">Spend Analyzer</string>
    <string name="earnings_vs_expenses_chart">Earnings vs Expenses Chart and Suggestions</string>
    <string name="earnings_category_wise_chart">Earnings Category-wise</string>
    <string name="expenses_category_wise_chart">Expenses Category-wise</string>
    <string name="no_earning">No Earning Data Found</string>
    <string name="no_spending">No Expense Data Found</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_date">Date of Transaction</string>
    <string name="amount">Amount</string>
    <string name="transaction_type_credited_debited">Transaction Type (Credit/Debit)</string>
    <string name="transaction_type_earning_expense">Transaction Type (Earning/Expense)</string>
    <string name="remarks">Remarks</string>
    <string name="select_transaction_date">Select Transaction Date</string>
    <string name="enter_transaction_amount">Enter Transaction Amount</string>
    <string name="enter_transaction_category">Enter Transaction Category</string>
    <string name="select_transaction_type">Select Transaction Type</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="submit_transaction">Submit Transaction Info</string>
    <string name="frequency">Frequency</string>
    <string name="add_transaction_category">Add Transaction Category</string>
    <string name="category_name">Category Name (e.g Rent,Salary etc)</string>
    <string name="interval">Interval</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="select_interval">Select Interval</string>
    <string name="add_category_info">Add Category</string>
    <string-array name="transaction_type">
        <item>All Earnings &amp; Expenses</item>
        <item>Earnings</item>
        <item>Expenses</item>
    </string-array>
    <string-array name="transaction_type_chart">
        <item>Earnings vs Expenses</item>
        <item>Earnings</item>
        <item>Expenses</item>
    </string-array>
    <string name="goal_manager">Goal Manager</string>
    <string name="no_goal">No Goal Added Yet</string>
    <string name="goal_manager_text">The long-term objective of financial management is ultimately to help the company maximize profits. In order to do that, a financial manager needs to focus on smaller, more specific goals of financial management: planning, cost containment, cash flow management and legal compliance.</string>
    <string name="note_saved_goal">Note : You will get notifications on your saved goals in Expense Manager</string>
    <string name="no_saved_goal">No Goal Saved Yet</string>
    <string-array name="goal_type">
        <item>Home</item>
        <item>Buy a car</item>
        <item>Education</item>
        <item>Save tax</item>
        <item>Go on vacation</item>
        <item>Plan for wedding</item>
        <item>Others</item>
    </string-array>
    <string name="goal_amount">Goal Amount</string>
    <string name="future_value">Future Value</string>
    <string name="duration">Duration</string>
    <string name="down_payment">Down Payment</string>
    <string name="emi">EMI</string>
    <string name="add_goal">Add Goal</string>
    <string name="select_goal">Select Goal</string>
    <string name="period_to_achieve_goal">Period to achieve Goal</string>
    <string name="year">Year(s)</string>
    <string name="month">Months(s)</string>
    <string name="inflation_rate">Inflation Rate</string>
    <string name="get_goal">Get Goal</string>
    <string name="proceed">Proceed</string>
    <string name="save_goal">Save Goal</string>
    <string name="select_goal_type">Select Goal Type</string>
    <string name="enter_goal_amount">Enter Goal Amount</string>
    <string name="enter_year">Enter Year(s)</string>
    <string name="enter_month">Enter Month(s)</string>
    <string name="enter_inflation_rate">Enter Inflation Rate</string>
    <string name="loan_manager">Loan Manager</string>
    <string name="bank_name">Bank Name</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="processing_fee">Processing Fee</string>
    <string name="tenure">Tenure</string>
    <string name="apply">Apply</string>
    <string name="investment_manager">Investment Manager</string>
    <string name="investment_manager_text">In today’s day and age, maintaining financial stability has become quite difficult for most of the individuals. Understanding the requirement of financial stability in an individual’s life, the insurance companies have come up with guaranteed income plans.</string>
    <string name="investment_type">Investment Type</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="aum">AUM</string>
    <string name="exit_load">Exit Load</string>
    <string name="fund_management">Funds Management</string>
    <string name="fund_management_title">If you are looking to fund your business/startup, please fill details below</string>
    <string name="personal_information">Personal Information</string>
    <string-array name="credit_quality">
        <item>499 or Below</item>
        <item>500 – 599</item>
        <item>600 – 649</item>
        <item>650 – 679</item>
        <item>680 – 719</item>
        <item>720 – Higher</item>
    </string-array>
    <string name="add_photo">Add Your Photo</string>
    <string name="add_presentation">Add Presentation</string>
    <string name="loan_information">Loan Information</string>
    <string name="requested_loan_amount">Amount Requested</string>
    <string name="number_of_deposits">Number of Deposits in Last Month</string>
    <string name="total_amount_deposit">Total Amount Deposited in Last Month</string>
    <string name="ending_balance">Last Month Ending Balance</string>
    <string name="support">Support</string>
    <string name="dashboard">Dashboard</string>
    <string name="wallet">Wallet</string>
    <string name="payments">Payments</string>
</resources>