<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_theme"
        android:orderInCategory="100"
        android:title="@string/choose_theme"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact_us"
        android:orderInCategory="100"
        android:title="@string/action_contact_us"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mobile_no"
        android:orderInCategory="100"
        android:title="@string/service_mobile_number"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mail"
        android:orderInCategory="100"
        android:title="@string/service_email_id"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        android:visible="false"
        app:showAsAction="never" />
</menu>
