<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".ui.activity.PermissionActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/action_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/get_started"
                android:textColor="?attr/commonTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/action_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/mishutt_access"
                android:textColor="?attr/commonTextColor"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sms_permission"
                android:textColor="?attr/textColor"
                android:textSize="15sp"
                android:lineSpacingExtra="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/location_optional"
                android:textColor="?attr/textColor"
                android:textSize="15sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location_permission"
                android:textColor="?attr/textColor"
                android:textSize="15sp"
                android:lineSpacingExtra="2dp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_terms_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/description"
            android:textColor="?attr/textColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/action_button"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/exit"
                android:textColor="?attr/textColor"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/action_button"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/agree"
                android:textColor="?attr/commonTextColor"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
