<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:animateLayoutChanges="true"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_contact_us"
        android:textColor="?attr/commonTextColor"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/layout_service_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/action_button"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:padding="2dp"
                android:src="@drawable/call"
                android:contentDescription="@string/image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/service_mobile_number"
                android:textColor="?attr/textColor"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_service_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/action_button"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="2dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/email"
                android:contentDescription="@string/image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/service_email_id"
                android:textColor="?attr/textColor"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_rectangle"
            android:layout_gravity="end"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/action_cancel"
            android:textAllCaps="true"
            android:textColor="?attr/commonTextColor"/>
    </LinearLayout>
</LinearLayout>